proccessing with url

--- a/env.example
+++ b/env.example
@@ -5,12 +5,6 @@ NOTION_DATABASE_ID=your_notion_database_id
 # DeepSeek AI API key for summarization
 DEEPSEEK_API_KEY=your_deepseek_api_key
 
-# Instagram credentials
-INSTAGRAM_USERNAME=your_instagram_username
-INSTAGRAM_PASSWORD=your_instagram_password
-
-# RapidAPI key for Instagram API access (recommended for better reliability)
-RAPID_API_KEY=your_rapidapi_key
-
-# n8n webhook URL (will be generated when you start n8n)
-N8N_WEBHOOK_URL=http://localhost:5678/webhook/instagram-summarizer 
+# Instagram credentials for bot account (create a dedicated account for automation)
+INSTAGRAM_USERNAME=your_bot_instagram_username
+INSTAGRAM_PASSWORD=your_bot_instagram_password 
